syntax = "proto3";
package mun.claim.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";
import "claim/v1beta1/claim_record.proto";
import "claim/v1beta1/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "mun/x/claim/types";

// Query defines the gRPC querier service.
service Query {
  // this line is used by starport scaffolding # 2
  rpc ModuleAccountBalance(QueryModuleAccountBalanceRequest)
      returns (QueryModuleAccountBalanceResponse) {
    option (google.api.http).get =
        "/mun/claim/v1beta1/module_account_balance";
  }
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/mun/claim/v1beta1/params";
  }
  rpc ClaimRecord(QueryClaimRecordRequest) returns (QueryClaimRecordResponse) {
    option (google.api.http).get =
        "/mun/claim/v1beta1/claim_record/{address}";
  }
  rpc ClaimableForAction(QueryClaimableForActionRequest) returns (QueryClaimableForActionResponse) {
    option (google.api.http).get = "/mun/claim/v1beta1/claimable_for_action/{address}/{action}";
  }
  rpc TotalClaimable(QueryTotalClaimableRequest) returns (QueryTotalClaimableResponse) {
    option (google.api.http).get = "/mun/claim/v1beta1/total_claimable/{address}";
  }

  rpc MerkleRoot(QueryMerkleRootRequest) returns (QueryMerkleRootResponse) {
    option (google.api.http).get = "/mun/claim/v1beta1/merkle_root";
  }

  rpc Whitelisted(QueryWhitelistedRequest) returns (QueryWhitelistedResponse) {
    option (google.api.http).get = "/mun/claim/v1beta1/verify/{address}/{proof}";
  }
}
// this line is used by starport scaffolding # 3

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryModuleAccountBalanceRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryModuleAccountBalanceResponse {
  // params defines the parameters of the module.
  repeated cosmos.base.v1beta1.Coin moduleAccountBalance = 1 [
    (gogoproto.moretags) = "yaml:\"coins\"",
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryClaimRecordRequest {
  string address = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];
}

message QueryClaimRecordResponse {
  ClaimRecord claim_record = 1 [
    (gogoproto.moretags) = "yaml:\"claim_record\"",
    (gogoproto.nullable) = false
  ];
}

message QueryClaimableForActionRequest {
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  Action action = 2 [ (gogoproto.moretags) = "yaml:\"action\"" ];
}

message QueryClaimableForActionResponse {
  repeated cosmos.base.v1beta1.Coin coins = 1 [
    (gogoproto.moretags) = "yaml:\"coins\"",
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

message QueryTotalClaimableRequest {
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
}

message QueryTotalClaimableResponse {
  repeated cosmos.base.v1beta1.Coin coins = 1 [
    (gogoproto.moretags) = "yaml:\"coins\"",
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

message QueryMerkleRootRequest {
}

message QueryMerkleRootResponse {
  string merkle_root = 1;
}

message QueryWhitelistedRequest {
  string address = 1;
  string proof = 2;
}

message QueryWhitelistedResponse {
  bool whitelisted = 1;
}